syntax = "proto3";

package rivet.backend.pkg.user_identity.get;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/user_identity.proto";

message Request {
	repeated rivet.common.Uuid user_ids = 1;
}

message Response {
	message User {
		rivet.common.Uuid user_id = 1;
		repeated rivet.backend.user_identity.Identity identities = 2;
	}

	repeated User users = 1;
}

message CacheUserIdentity {
	rivet.common.Uuid user_id = 1;
	optional string email = 2;
	optional string access_token_name = 3;
}
